adição do header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="teste3">
+
+        <div class="teste4 container">
+            <div class="teste5">
+                <h1>Invista em tecnologia e tenha sua rede de minimercados autônomos</h1>
+                <p>Leve mais comodidade para a sua região e fature 24h por dia com mercados autônomos em condomínios e empresas.</p>
+            </div>
+            <div></div>
+            <div class="btn center">
+                <a href="#section_form">Quero saber mais</a>
+            </div>
+        </div>
+    </header>
     <main class="center">
         <section>
             <div class="section_one">
@@ -62,8 +74,9 @@
                 </div>
             </div>
         </section>
-        <section class="section_two center container">
-            <div class="accordion">
+        <section class="section_two">
+            
+            <div class="accordion container">
                 <h2>Faça parte do negócio mais inovador e rentável do varejo!</h2>
                 <p>Ao se tornar um franqueado market4u, você irá receber todo suporte, capacitação e treinamento de quem é líder absoluto nesse segmento.</p>
                 <details>
@@ -164,7 +177,10 @@
                 </ol>
             </div>
         </section>
-        <section></section>
+        <section>
+
+            
+        </section>
         <section>
             <div class="section_four">
                 <div>
@@ -300,7 +316,7 @@
                         </div>
 
                         <div class="send_button">
-                            <button type="submit" class="btn">Enviar</button>
+                            <button type="submit" class="send_btn">Enviar</button>
                         </div>
                     </form>
                 </div>
