carrossel funcionando corretamente

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 </ol>
             </div>
         </section>
-        <section class="carousel" aria-label="Gallery">
+        <section class="carousel container" aria-label="Gallery">
             
             <ol class="carousel__viewport">
                 <li id="carousel__slide1" tabindex="0" class="carousel__slide">
