--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Seja um franqueado do market4u</title>
-    <script src="index.js"></script>
 </head>
 
 <body>
@@ -271,8 +270,7 @@
                     <p>Preencha seus dados e receba nossa apresentação completa</p>
                 </div>
                 <div class="form_container">
-                    <form class="form_contact"  name="form_contact" id="id_form_contact" method="post" action="https://hook.us1.make.com/tsd1x29rtelk21uhd100g2i8ir518bit
-                    ">
+                    <form class="form_contact"  name="form_contact" id="id_form_contact">
                         <div class="form_group">
                             <label class="class_label"> Nome Completo</label>
                             <input type="name" name="name" id="name" placeholder="Nome" required/>
@@ -329,11 +327,11 @@
                         <div class="form_group">
                             <label for="investment" class="class_label">Capital para investimento</label>
                             <select name="investment" id="investment" required aria-required="true">
-                                <option value="80 mil a 100 mil">80 mil a 100 mil</option>
-                                <option value="100 mil a 150 mil">100 mil a 150 mil</option>
-                                <option value="150 mil a 300 mil">150 mil a 300 mil</option>
-                                <option value="300 mil a 500 mil">300 mil a 500 mil</option>
-                                <option value="Mais de 500 mil">Mais de 500 mil</option>
+                                <option value=80 >80 mil a 100 mil</option>
+                                <option value=100 >100 mil a 150 mil</option>
+                                <option value=150 >150 mil a 300 mil</option>
+                                <option value=300>300 mil a 500 mil</option>
+                                <option value=500>Mais de 500 mil</option>
                             </select>
                         </div>
 
@@ -343,12 +341,13 @@
                     </form>
                 </div>
             </div>
+            
         </section>
     </main>
     <footer class="footer_last center container">
         <p>&copy; Copyright. 2024. market4u. Todos os direitos reservados.</p>
     </footer>
-    
+    <script src="index.js"></script>
 </body>
 </html>
 
